--- a/www/styles.css
+++ b/www/styles.css
@@ -8,12 +8,13 @@ body {
 /* Change navbar color */
 .navbar {
   background-color: #2c3e50; /* Dark color for the navbar */
+  border-bottom: 2px solid #ccc; /* Border at the bottom */
   border-color: #1a252f; /* Slightly darker border */
 }
 
 .navbar-default .navbar-brand, 
 .navbar-default .navbar-nav>li>a {
-  color: #ecf0f1; /* Light text color */
+  color: #fff /* Light text color */
 }
 
 /* Change navbar hover color */
@@ -21,3 +22,6 @@ body {
 .navbar-default .navbar-nav>li>a:hover {
   color: #d1e0e0; /* Slightly darker on hover */
 }
+
+
+
